@@ -1,6 +1,13 @@
 # ChangeLog for sys-devel/libtool
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/libtool/ChangeLog,v 1.170 2010/06/09 20:37:07 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/libtool/ChangeLog,v 1.172 2010/07/06 12:43:51 vapier Exp $
+
+  06 Jul 2010; Mike Frysinger <vapier@gentoo.org> libtool-2.2.10.ebuild:
+  Force newer version of autoconf #327079 by Matt Turner.
+
+  06 Jul 2010; Mike Frysinger <vapier@gentoo.org> libtool-2.2.6.ebuild,
+  libtool-2.2.10.ebuild:
+  Block older automake #304055 by Dennis Nezic.
 
 *libtool-2.2.10 (09 Jun 2010)
 
